added some game logic

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,17 +2,32 @@ html, body, div {
   margin: 0px;
   padding: 0px;
 }
+div.title {
+  font-family: sans-serif;
+  font-size: 80px;
+  margin: 0px auto;
+  width: 500px;
+  padding: 10px;
+  text-align: center;
+}
 div.viewer {
   text-align: center;
-  border: 1px solid black;
+  border: 10px solid black;
+  width: 260px;
   height: 120px;
-  width: 480px;
   overflow: hidden;
-  position: fixed;
-  top: 440px;
+  margin: 0px auto;
+}
+div.lever {
+  text-align: center;
+  padding: 20px;
+}
+button#btn-pull {
+  width: 120px;
+  height: 40px;
+  font-size: 20px;
 }
 div.reel {
-  width: 80px;
   position: relative;
   display: inline-block;
 }
@@ -21,32 +36,23 @@ div#reel-1 {
   -webkit-animation-duration: 0.25s;
   -webkit-animation-iteration-count: 10;
   -webkit-animation-timing-function: linear;
-  /*-moz-animation-name: slideDown;*/
-  /*-moz-animation-duration: 0.75;*/
-  /*-moz-animation-timing-function: linear;*/
-  /*-mox-animation-iteration-count: infinite;*/
 }
 div#reel-2 {
+  /*margin: 0px 10px;*/
+  border-width: 0px 10px;
+  border-style: solid;
+  border-color: black;
   -webkit-animation-name: slideDown;
   -webkit-animation-duration: 0.25s;
   -webkit-animation-iteration-count: 20;
   -webkit-animation-timing-function: linear;
-  /*-moz-animation-name: slideDown;*/
-  /*-moz-animation-duration: 0.75;*/
-  /*-moz-animation-timing-function: linear;*/
-  /*-mox-animation-iteration-count: infinite;*/
 }
 div#reel-3 {
   -webkit-animation-name: slideDown;
   -webkit-animation-duration: 0.25s;
   -webkit-animation-iteration-count: 30;
   -webkit-animation-timing-function: linear;
-  /*-moz-animation-name: slideDown;*/
-  /*-moz-animation-duration: 0.75;*/
-  /*-moz-animation-timing-function: linear;*/
-  /*-mox-animation-iteration-count: infinite;*/
 }
-
 @-webkit-keyframes slideDown {
   from {
     top: -300px;
@@ -63,12 +69,8 @@ div#reel-3 {
     top: -60px;
   }
 }
-div.blank {
-  width: 40px;
-}
 div.reel-item {
   padding-top: 15px;
-  /*border: 1px solid black;*/
   width: 80px;
   height: 65px;
   font-size: 40px;
@@ -77,6 +79,12 @@ div.reel-item {
   color: white;
   text-align: center;
 }
-div.one { background-color: red }
-div.two { background-color: blue }
-div.three { background-color: green }
+div.one {
+  background-color: red
+}
+div.two {
+  background-color: blue
+}
+div.three {
+  background-color: green
+}
