--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,6 +9,7 @@ div.title {
   width: 500px;
   padding: 10px;
   text-align: center;
+  border: 1px solid red;
 }
 div.viewer {
   text-align: center;
@@ -21,6 +22,17 @@ div.viewer {
 div.lever {
   text-align: center;
   padding: 20px;
+  border: 1px solid red;
+}
+div#result {
+  width: 260px;
+  height: 80px;
+  margin: 0px auto;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 40px;
+  padding-top: 40px;
+  border: 1px solid red;
 }
 button#btn-pull {
   width: 120px;
