implemented functional reset function, so adding event to play again

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -39,6 +39,9 @@ div#result {
   padding-top: 40px;
   border: 1px solid red;
 }
+div#btn-reset-container {
+  display: none;
+}
 button#btn-reset {
   width: 140px;
   height: 40px;
@@ -55,7 +58,6 @@ div#reel-1 {
   -webkit-animation-timing-function: linear;
 }
 div#reel-2 {
-  /*margin: 0px 10px;*/
   border-width: 0px 10px;
   border-style: solid;
   border-color: black;
@@ -63,6 +65,11 @@ div#reel-2 {
   -webkit-animation-duration: 0.25s;
   -webkit-animation-iteration-count: 20;
   -webkit-animation-timing-function: linear;
+}
+div#reel-2-temp {
+  border-width: 0px 10px;
+  border-style: solid;
+  border-color: black;
 }
 div#reel-3 {
   -webkit-animation-name: slideDown;
