--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -29,7 +29,7 @@ button#btn-pull {
   height: 40px;
   font-size: 20px;
 }
-div#result {
+div#result-display {
   width: 260px;
   height: 80px;
   margin: 0px auto;
