changing win/lose message

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -88,12 +88,30 @@ div.reel-item {
   width: 120px;
   height: 120px;
 }
-div.one {
-  background-color: red
+div.left-one {
+  background-image: url(../images/left-coffee.jpg);
 }
-div.two {
-  background-color: blue
+div.left-two {
+  background-image: url(../images/left-espresso.jpg);
 }
-div.three {
-  background-color: green
+div.left-three {
+  background-image: url(../images/left-tea.jpg);
+}
+div.middle-one {
+  background-image: url(../images/middle-coffee.jpg);
+}
+div.middle-two {
+  background-image: url(../images/middle-espresso.jpg);
+}
+div.middle-three {
+  background-image: url(../images/middle-tea.jpg);
+}
+div.right-one {
+  background-image: url(../images/right-coffee.jpg);
+}
+div.right-two {
+  background-image: url(../images/right-espresso.jpg);
+}
+div.right-three {
+  background-image: url(../images/right-tea.jpg);
 }
