--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,39 +3,46 @@ html, body, div {
   padding: 0px;
 }
 div.title {
-  font-family: sans-serif;
+  font-family: 'Candal', sans-serif;
+  background-color: #006633;
+  color: white;
   font-size: 80px;
   margin: 0px auto;
-  /*width: 500px;*/
-  padding: 10px;
+  padding-bottom: 10px;
   text-align: center;
-  border: 1px solid red;
+  border: 10px double white;
+  width: 660px;
 }
 div.viewer {
   text-align: center;
-  border: 10px solid black;
+  border: 10px double #006633;
   width: 380px;
   height: 180px;
   overflow: hidden;
-  margin: 0px auto;
+  margin: 30px auto;
+}
+div.button-container {
+  text-align: center;
+  margin: 30px;
+}
+div.button-container > div {
+  display: inline-block;
 }
 div.button {
   text-align: center;
-  padding: 20px;
-  border: 1px solid red;
+  padding: 0px 15px;
 }
 button#btn-pull {
-  width: 120px;
+  width: 140px;
   height: 40px;
   font-size: 20px;
 }
 div#result-display {
   height: 80px;
   text-align: center;
-  font-family: sans-serif;
+  font-family: 'Candal', sans-serif;
   font-size: 40px;
-  padding-top: 40px;
-  border: 1px solid red;
+  color: #006633;
 }
 button#btn-reset {
   width: 140px;
@@ -54,8 +61,8 @@ div#reel-1 {
 }
 div#reel-2 {
   border-width: 0px 10px;
-  border-style: solid;
-  border-color: black;
+  border-style: double;
+  border-color: #006633;
   -webkit-animation-name: slideDown;
   -webkit-animation-duration: 0.25s;
   -webkit-animation-iteration-count: 20;
@@ -63,8 +70,8 @@ div#reel-2 {
 }
 div#reel-2-temp {
   border-width: 0px 10px;
-  border-style: solid;
-  border-color: black;
+  border-style: double;
+  border-color: #006633;
 }
 div#reel-3 {
   -webkit-animation-name: slideDown;
